[project]
name = "ascii-pingboard"
version = "0.1.0"
description = "ASCII curses ping dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wetair1" }]
keywords = ["ascii", "curses", "terminal", "tui", "ping", "network"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console :: Curses",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.ascii-pingboard]
entrypoint = "main.py"
stdlib_only = true
